@@ -9,3 +9,13 @@ const QString& CREMapInformation::path() const
 {
     return myPath;
 }
+
+const QString& CREMapInformation::name() const
+{
+    return myName;
+}
+
+void CREMapInformation::setName(const QString& name)
+{
+    myName = name;
+}
